<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".GooglePlusActivity" >
    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:weightSum="5"
        android:visibility="gone">
 
       		<ImageView
       		    android:id="@+id/imgProfilePic"
      	        android:layout_width="100dp"
      	        android:layout_height="100dp"
      	        android:paddingTop="10dp"
     	        android:layout_gravity="center"
      	        android:layout_weight="1"/>
 
    	    <LinearLayout
     	        android:layout_width="wrap_content"
     	        android:layout_height="wrap_content"
     	        android:orientation="vertical"
     	        android:layout_gravity="center"
     	        android:layout_weight="2" >
 
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
      	        android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textSize="14sp" />

            <!--
            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:textSize="14sp" />
            
            <TextView 
                android:id="@+id/txtDatacollected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:textSize="14sp" /> 
            -->

                
             <!--
             <TextView 
                android:id="@+id/txtTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:textSize="14sp" />  
             
              <TextView 
                android:id="@+id/txtRank"
                android:text="@string/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp" /> 
                  
             <TextView 
                android:id="@+id/txtRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:textSize="14sp" />    
              -->
        </LinearLayout>
    </LinearLayout>
 	<ImageView 
         		android:id="@+id/imgappname"
         		android:src="@drawable/metro_app_name"
      	        android:layout_width="wrap_content"
      	        android:layout_height="wrap_content"
        />
    <ImageView
        		android:id="@+id/imgicon"
        		android:src="@drawable/imgicon"
      	        android:layout_width="wrap_content"
      	        android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
      	        android:layout_marginBottom="15dp"
        />



    <Button
        android:id="@+id/btn_launch_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="START"
        android:background="@color/common_signin_btn_default_background"
        android:layout_marginBottom="20dp"
        android:visibility="visible"/>

 	<!--
    <Button
        android:id="@+id/btn_fileupload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fileupload"
        android:visibility="gone"
       />


    <Button
        android:id="@+id/btn_check_updates"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_check_updates"
        android:visibility="gone" />
    -->

    <Button
        android:id="@+id/btn_entry_station"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_entry_station"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_exit_station"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit_station"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_note_on_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_note_on_time"
        android:visibility="gone" />


    <Button
        android:id="@+id/btn_note_off_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_note_off_time"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit_from_app"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/txt_file_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text = "@string/txt_file_upload"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtDatasent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:textSize="14sp"
        android:visibility="gone"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <ImageView
        		android:id="@+id/imgapppurpose"
        		android:src="@drawable/imgapppurpose"
      	        android:layout_width="wrap_content"
      	        android:layout_height="10dp"
      	        android:layout_marginBottom="5dp"
        />
</LinearLayout>